Touch up landing demo page

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
 </head>
 <body>
 </body>
