--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,6 +4,18 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+  <style>
+    div#center {
+      position: absolute;
+      left: 50%;
+      top: 40%;
+      transform: translate(-50%, -50%);
+      width: 60%;
+      height: 50%;
+      padding: 20px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+    }
+  </style>
 </head>
 <body>
 </body>
